--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,4 +1,4 @@
-#include_directories(test ${CMAKE_SOURCE_DIR}/include)
+include_directories(test ${CMAKE_SOURCE_DIR}/include)
 
 add_executable(test test.cpp)
 target_link_libraries(test PUBLIC math)
