--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,6 +15,7 @@ set(publicHeaders
         "threepp/math/Matrix3.hpp"
         "threepp/math/Matrix4.hpp"
         "threepp/math/Plane.hpp"
+        "threepp/math/Sphere.hpp"
         "threepp/math/Vector2.hpp"
         "threepp/math/Vector3.hpp"
         "threepp/math/Vector4.hpp"
@@ -45,6 +46,7 @@ set(sources
         "threepp/math/Matrix4.cpp"
         "threepp/math/Plane.cpp"
         "threepp/math/Triangle.cpp"
+        "threepp/math/Sphere.cpp"
         "threepp/math/Vector2.cpp"
         "threepp/math/Vector3.cpp"
         "threepp/math/Vector4.cpp"
