--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,14 +12,16 @@ set(publicHeaders
         "threepp/math/Box3.hpp"
         "threepp/math/Color.hpp"
         "threepp/math/Euler.hpp"
+        "threepp/math/Frustum.hpp"
         "threepp/math/Matrix3.hpp"
         "threepp/math/Matrix4.hpp"
         "threepp/math/Plane.hpp"
+        "threepp/math/Ray.hpp"
         "threepp/math/Sphere.hpp"
+        "threepp/math/Triangle.hpp"
         "threepp/math/Vector2.hpp"
         "threepp/math/Vector3.hpp"
         "threepp/math/Vector4.hpp"
-        "threepp/math/Triangle.hpp"
         "threepp/math/Quaternion.hpp"
         "threepp/math/MathUtils.hpp"
 
@@ -42,11 +44,13 @@ set(sources
         "threepp/math/Box3.cpp"
         "threepp/math/Color.cpp"
         "threepp/math/Euler.cpp"
+        "threepp/math/Frustum.cpp"
         "threepp/math/Matrix3.cpp"
         "threepp/math/Matrix4.cpp"
         "threepp/math/Plane.cpp"
-        "threepp/math/Triangle.cpp"
+        "threepp/math/Ray.cpp"
         "threepp/math/Sphere.cpp"
+        "threepp/math/Triangle.cpp"
         "threepp/math/Vector2.cpp"
         "threepp/math/Vector3.cpp"
         "threepp/math/Vector4.cpp"
