--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,7 @@ set(publicHeaders
         "threepp/math/Box2.hpp"
         "threepp/math/Box3.hpp"
         "threepp/math/Color.hpp"
+        "threepp/math/Cylindrical.hpp"
         "threepp/math/Euler.hpp"
         "threepp/math/Frustum.hpp"
         "threepp/math/Matrix3.hpp"
@@ -43,6 +44,7 @@ set(sources
         "threepp/math/Box2.cpp"
         "threepp/math/Box3.cpp"
         "threepp/math/Color.cpp"
+        "threepp/math/Cylindrical.cpp"
         "threepp/math/Euler.cpp"
         "threepp/math/Frustum.cpp"
         "threepp/math/Matrix3.cpp"
