--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,4 +1,5 @@
 include_directories(test ${CMAKE_SOURCE_DIR}/include)
+include_directories(test ${CMAKE_SOURCE_DIR}/src)
 
 add_executable(test test.cpp)
 target_link_libraries(test PUBLIC threepp)
