--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,6 +24,7 @@ set(publicHeaders
         "threepp/math/Plane.hpp"
         "threepp/math/Ray.hpp"
         "threepp/math/Sphere.hpp"
+        "threepp/math/SphericalHarmonics3.hpp"
         "threepp/math/Triangle.hpp"
         "threepp/math/Vector2.hpp"
         "threepp/math/Vector3.hpp"
@@ -70,6 +71,7 @@ set(sources
         "threepp/math/Plane.cpp"
         "threepp/math/Ray.cpp"
         "threepp/math/Sphere.cpp"
+        "threepp/math/SphericalHarmonics3.cpp"
         "threepp/math/Triangle.cpp"
         "threepp/math/Vector2.cpp"
         "threepp/math/Vector3.cpp"
