--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,12 +18,14 @@ set(publicHeaders
         "threepp/math/Cylindrical.hpp"
         "threepp/math/Euler.hpp"
         "threepp/math/Frustum.hpp"
+        "threepp/math/Line3.hpp"
         "threepp/math/MathUtils.hpp"
         "threepp/math/Matrix3.hpp"
         "threepp/math/Matrix4.hpp"
         "threepp/math/Plane.hpp"
         "threepp/math/Ray.hpp"
         "threepp/math/Sphere.hpp"
+        "threepp/math/Spherical.hpp"
         "threepp/math/SphericalHarmonics3.hpp"
         "threepp/math/Triangle.hpp"
         "threepp/math/Vector2.hpp"
@@ -35,8 +37,11 @@ set(publicHeaders
         "threepp/objects/Mesh.hpp"
 
         "threepp/lights/Light.hpp"
+        "threepp/lights/LightProbe.hpp"
         "threepp/lights/AmbientLight.hpp"
+        "threepp/lights/DirectionalLight.hpp"
         "threepp/lights/LightShadow.hpp"
+        "threepp/lights/PointLight.hpp"
 
         "threepp/renderers/GLRenderer.hpp"
 
@@ -65,12 +70,14 @@ set(sources
         "threepp/math/Cylindrical.cpp"
         "threepp/math/Euler.cpp"
         "threepp/math/Frustum.cpp"
+        "threepp/math/Line3.cpp"
         "threepp/math/MathUtils.cpp"
         "threepp/math/Matrix3.cpp"
         "threepp/math/Matrix4.cpp"
         "threepp/math/Plane.cpp"
         "threepp/math/Ray.cpp"
         "threepp/math/Sphere.cpp"
+        "threepp/math/Spherical.cpp"
         "threepp/math/SphericalHarmonics3.cpp"
         "threepp/math/Triangle.cpp"
         "threepp/math/Vector2.cpp"
