--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,9 @@ set(publicHeaders
         "threepp/core/Object3D.hpp"
 
         "threepp/geometries/BoxGeometry.hpp"
+        "threepp/geometries/ConeGeometry.hpp"
+        "threepp/geometries/CylinderGeometry.hpp"
+        "threepp/geometries/PlaneGeometry.hpp"
         "threepp/geometries/SphereGeometry.hpp"
 
         "threepp/math/Box2.hpp"
@@ -65,6 +68,8 @@ set(sources
         "threepp/core/Object3D.cpp"
 
         "threepp/geometries/BoxGeometry.cpp"
+        "threepp/geometries/CylinderGeometry.cpp"
+        "threepp/geometries/PlaneGeometry.cpp"
         "threepp/geometries/SphereGeometry.cpp"
 
         "threepp/math/Box2.cpp"
