--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -4,6 +4,9 @@ include_directories(test ${CMAKE_SOURCE_DIR}/src)
 add_executable(test test.cpp)
 target_link_libraries(test PUBLIC threepp)
 
+add_executable(demo demo.cpp)
+target_link_libraries(demo PUBLIC threepp)
+
 add_executable(gl_test gl_test.cpp)
 target_link_libraries(gl_test
         PRIVATE
