--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -4,6 +4,12 @@ include_directories(test ${CMAKE_SOURCE_DIR}/src)
 add_executable(test test.cpp)
 target_link_libraries(test PUBLIC threepp)
 
+add_executable(test_event test_event.cpp)
+target_link_libraries(test_event PUBLIC threepp)
+
+add_executable(test_uniform test_uniform.cpp)
+target_link_libraries(test_uniform PUBLIC threepp)
+
 add_executable(demo demo.cpp)
 target_link_libraries(demo PUBLIC threepp)
 
