--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -13,6 +13,10 @@ target_link_libraries(test_uniform PUBLIC threepp)
 add_executable(demo demo.cpp)
 target_link_libraries(demo PUBLIC threepp)
 
+add_executable(raw_shader raw_shader.cpp)
+target_link_libraries(raw_shader PUBLIC threepp)
+
+
 add_executable(test_capabilites test_capabilites.cpp)
 target_link_libraries(test_capabilites
         PUBLIC
@@ -28,11 +32,5 @@ target_link_libraries(test_image_loader
         PRIVATE
         CONAN_PKG::glad
         CONAN_PKG::cimg)
-
-add_executable(gl_test gl_test.cpp)
-target_link_libraries(gl_test
-        PRIVATE
-        CONAN_PKG::glfw
-        CONAN_PKG::glad)
 
 
