add seascape demo

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -13,6 +13,10 @@ target_link_libraries(demo PUBLIC threepp)
 add_executable(raw_shader raw_shader.cpp)
 target_link_libraries(raw_shader PUBLIC threepp)
 
+add_executable(seascape_demo seascape_demo.cpp)
+target_link_libraries(seascape_demo PUBLIC threepp)
+
+
 add_executable(test_capabilites test_capabilites.cpp)
 target_link_libraries(test_capabilites
         PUBLIC
