add key listener

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -13,6 +13,9 @@ target_link_libraries(demo PUBLIC threepp)
 add_executable(meshphong meshphong.cpp)
 target_link_libraries(meshphong PUBLIC threepp)
 
+add_executable(key_listener key_listener.cpp)
+target_link_libraries(key_listener PUBLIC threepp)
+
 add_executable(points_demo points_demo.cpp)
 target_link_libraries(points_demo PUBLIC threepp)
 
