--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,6 +1,9 @@
 include_directories(test ${CMAKE_SOURCE_DIR}/include)
 include_directories(test ${CMAKE_SOURCE_DIR}/src)
 
+add_executable(arrow arrow.cpp)
+target_link_libraries(arrow PUBLIC threepp)
+
 add_executable(demo demo.cpp)
 target_link_libraries(demo PUBLIC threepp)
 
