--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -37,6 +37,7 @@ set(publicHeaders
         "threepp/helpers/helpers.hpp"
         "threepp/helpers/AxesHelper.hpp"
         "threepp/helpers/ArrowHelper.hpp"
+        "threepp/helpers/Box3Helper.hpp"
         "threepp/helpers/PlaneHelper.hpp"
 
         "threepp/loaders/ImageLoader.hpp"
